# tilegrad

./: .gitignore  FRAGMENT_GEMM_PLAN.md  NEXT_ROADMAP.md  NEXT_STEPS.md  README.md  ROADMAP.md  outline.md  predicate_outline.md  pyproject.toml
benchmarks/: bench_exploratory_gemm.py  bench_gemm.py  bench_resume_gemm.py  history.py  runner.py
examples/: builder_canonical_tiled_gemm.py  builder_copy.py  builder_copy_3d.py  builder_grid_thread_fragment_gemm.py  builder_grid_threads_copy.py  builder_grid_threads_output_lanes_gemm_edge.py  builder_grid_threads_tiled_gemm_edge.py  builder_grid_threads_unroll_fill.py  builder_guarded_row_sum.py  builder_guarded_vecadd_2d.py  builder_masked_copy_2d.py  builder_naive_gemm_2x2.py  builder_parallel_vecadd_2d.py  builder_pipelined_copy.py  builder_row_sum.py  builder_shape_dims_copy.py  builder_shared_copy.py  builder_shared_register_gemm.py  builder_threads_vecadd.py  builder_tilecopy_inspect.py  builder_tiled_gemm.py  builder_tiled_gemm_bm_bn_accum_tile.py  builder_tiled_gemm_full_edge_tile.py  builder_tiled_gemm_k_tail.py  builder_transpose_2d.py  ir_copy.py  ir_naive_gemm_2x2.py  ir_sequential_overwrite.py  ir_shared_copy.py  ir_transpose_2d.py  ir_two_shared_allocs.py  ir_zero.py  raw_shared_copy.py  raw_uop_zero.py
spec/: README.md  performance-manifest.md  render.sh  tilegrad-spec.tex  tinygrad-integration-contract.md
tests/: test_benchmark_history.py  test_benchmark_runner.py  test_builder.py  test_debug.py  test_ir.py  test_lowerer.py  test_runtime.py  test_tinygrad_compat.py  test_validate.py
tilegrad/: __init__.py  (+12 more)
(+2 files in other folders)
