[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tilegrad"
version = "0.0.0"
description = "TileLang-inspired experiments targeting tinygrad UOps."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tilegrad*"]
